fix: hide scrollbar for exploreItemsContainer in Firefox as well

--- a/src/features/projectsV2/ProjectsMap/MapFeatureExplorer/MapFeatureExplorer.module.scss
+++ b/src/features/projectsV2/ProjectsMap/MapFeatureExplorer/MapFeatureExplorer.module.scss
@@ -53,7 +53,9 @@
 
 .exploreItemsContainer {
   max-height: 400px;
+  overflow-x: hidden;
   overflow-y: auto;
+  scrollbar-width: none;
 
   &::-webkit-scrollbar {
     display: none;
